Version 2.5.0:

* Use floating point control register, output compiler warning when not.
* Added flush_log boolean option to flush log output after each log line.
* New UAE Native Interface (via built-in uaenative.library).
* Enforcer / AHI interface is added (but with a dummy AHI backend).
* Support for old WinUAE-style native calls.
* UAE core code updated from WinUAE 2.7.0.
* Code cleanup in UAE code to reduce the number of compiler warnings.
* Removed some unused source files from the source archive.
* Auto-generated source files are now auto-generated when compiling on all
  platforms, and not cached in the source archives any longer.
* Fixes to allow FS-UAE to be compiled with the lastest MinGW version.

Version 2.3.18:

* (Launcher) Replaced fengestad.no/fs-uae URLs with fs-uae.net ones.

Version 2.3.17:

* Remove old log file paths so they'll not be mistaken for current logs.
* Fix initial mute when option volume is set to 0.
* Updated translations: fi [Goingdown], pl [grimi], fr [Foul].
* (Launcher) Option download_file from DB does not have to be an archive.
* (Launcher) Fixed bug when doubleclicking on an URI in the floppy list.
* (Launcher) Fixed bug with selecting multiple files [2.3.16].
* (Launcher) Fixed trailing colon in translatiion of option description.
* (Launcher) Updated translations: fi [Goingdown], pl [grimi], fr [Foul].

Version 2.3.16:

* (Launcher) Always include Configurations directory in file scan regardless
  of scan dirs.
* (Launcher) Make file picker code compatible with both PySide and PyQT4.
* (Launcher) Added support for WHDLoad 17.2, set as default WHDLoad version.
* (Arcade) Fixed bug preventing games from launching.

Version 2.3.15:

* Reverted to previous MinGW compiler (Windows).
* (Launcher) Fixed a bug loading online database games with cpu specification.
* (Arcade) Fixed Windows shortcut for FS-UAE Arcade.

Version 2.3.14:

* JIT should work on Windows too now.
* New options: audio_frequency, audio_buffer_target_size.